<resources>
    <string name="app_name">BluetoothLock</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- 首页 -->
    <string name="add_lock">添加智能锁</string>
    <string name="e_home">Ehome</string>

    <!-- 登录 -->
    <string name="phone_number">请输入手机号</string>
    <string name="Please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">新用户注册</string>

    <!-- 忘记密码 -->
    <string name="new_password">请输入新密码</string>
    <string name="sure_new_password">请确认新密码</string>
    <string name="verifying_code">请输入验证码</string>
    <string name="get_the_verifying_code">获取验证码</string>
    <string name="Forget_the_password">忘记密码</string>

    <!-- 注册 -->
    <string name="sure_password">请确认密码</string>
    <string name="register_agreement">点击注册，即表示已阅读并同意</string>
    <string name="agreement">《EHOME服务协议》</string>
    <string name="bt_register">注册</string>
    <string name="Please_enter_the_correct_phone_number">请输入正确手机号码</string>
    <string name="Please_enter_the_correct_verifying_code">请输入正确的验证码</string>
    <string name="Please_enter_the_password_again">请再次输入密码</string>
    <string name="The_two_password_does_not_agree_please_reenter_it">两次密码不一致，请重新输入</string>
    <string name="Send_the_authentication_code_successfully">发送验证码成功，请注意查收</string>
    <string name="register_successfully">注册成功</string>
    <string name="Re_cquisition_after">s后重新获取</string>

    <!-- 用户界面 -->
    <string name="open_lock_info">开锁记录</string>
    <string name="Guide_to_use">使用指南</string>
    <string name="Version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="set">设置</string>
    <string name="About_us">关于我们</string>
    <string name="Exit_the_current_account">退出当前账号</string>

    <string name="openning">开锁中</string>
    <string name="searching">正在搜索</string>

    <!-- 个人信息 -->
    <string name="head">头像：</string>
    <string name="name">昵称：</string>
    <string name="mobile">手机号：</string>
    <string name="Personal_nformation">个人信息</string>

    <!-- 意见反馈 -->
    <string name="Please_enter_your_opinion">请输入您的意见</string>

    <!-- 锁界面 -->
    <string name="Connection">连接中...</string>
    <string name="Connection_success">连接成功</string>
    <string name="Connection_fail">连接失败</string>
    <string name="Unconnected">未连接</string>
    <string name="Re_search">重新搜索</string>
    <string name="Unlocking_success">开锁成功</string>
    <string name="Click_unlock">点击开锁</string>
    <string name="password_setting">密码设置</string>
    <string name="Fingerprint_setting">指纹设置</string>
    <string name="WIFI_configuration">WIFI配置</string>

    <!-- 修改界面 -->
    <string name="complete">完成</string>
    <string name="Modify_the_nickname">修改昵称</string>
    <string name="Please_enter_a_new_nickname">请输入新的昵称</string>
    <string name="Add_password">添加密码</string>
    <string name="modify_password">修改密码</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="password_name">密码名称：</string>
    <string name="Please_input_password_name">请输入密码名称</string>
    <string name="Password_addition_failed_Do_you_want_to_reset_the_password">密码添加失败，是否重设密码？</string>
    <string name="Click_fingerprints">点击添加指纹</string>
    <string name="Add_in">添加中...</string>
    <string name="Add_fingerprints">添加指纹</string>
    <string name="Fingerprints_name">指纹名称：</string>
    <string name="Please_input_fingerprints_name">请输入指纹名称</string>
    <string name="Fingerprints_addition_failed_Do_you_want_to_reset_add">指纹添加失败，是否重新添加？</string>
    <string name="wifi_name">WIFI名称：</string>
    <string name="wifi_password">WIFI密码：</string>
    <string name="Please_input_wifi_name">请输入wifi名称</string>
    <string name="Please_input_wifi_password">请输入wifi名称密码</string>
    <string name="Modify_Lock_name">修改锁名称</string>
    <string name="Lock_name">锁名称：</string>
    <string name="Please_input_Lock_name">请输入锁名称</string>

    <!-- 锁设置 -->
    <string name="Lock_set">锁设置</string>
    <string name="Modify_lock_name">修改锁名称</string>
    <string name="Unlock_binding">解除锁绑定</string>


    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>

</resources>
