<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_acount"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/txt_646464"
            android:textColorHint="@color/txt_646464"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_444444" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_verifying"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verifying_code"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/txt_646464"
                android:textColorHint="@color/txt_646464"
                android:textSize="17dp" />

            <Button
                android:id="@+id/bt_get_verifying"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/bt_ver_code"
                android:text="@string/get_the_verifying_code"
                android:textColor="@color/bg_0577fe"
                android:textSize="15dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_444444" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/txt_646464"
            android:textColorHint="@color/txt_646464"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_444444" />

        <EditText
            android:id="@+id/et_sure_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/sure_new_password"
            android:inputType="textPassword"
            android:textColor="@color/txt_646464"
            android:textColorHint="@color/txt_646464"
            android:textSize="17dp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bt_login"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>