<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_151519"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="开锁成功"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/tips_bg_02" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/tips_icon_shake" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_click_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/Click_unlock"
            android:textColor="@color/txt_0577fe"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_password_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/set_icon_password"
                android:gravity="center"
                android:text="@string/password_setting"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_fingerprint_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/set_icon_fingerprint"
                android:gravity="center"
                android:text="@string/Fingerprint_setting"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_wifi_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/set_icon_wifi"
                android:gravity="center"
                android:text="@string/WIFI_configuration"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>