<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_151519"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <LinearLayout
        android:id="@+id/lin_feedback"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/bg_23262d"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_icon_set"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/list_icon_back" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_4a505f" />

    <LinearLayout
        android:id="@+id/lin_about"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/bg_23262d"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/nav_icon_personal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/About_us"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/list_icon_back" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/bg_23262d"
        android:text="@string/Exit_the_current_account"
        android:textColor="@color/white"
        android:textSize="17dp" />


</LinearLayout>